fix vertical text collapse

--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -988,7 +988,8 @@ $color_blue: #0047BA
   .vertical_text  
     writing-mode: vertical-rl
     text-orientation: upright
-
+    min-height: 300px
+    width: 100%
 
   img
     max-width: 100%
